Green-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  namespace: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      version: green
  template:
    metadata:
      labels:
        app: nginx
        version: green
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
