Blue-Pod-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: blue
spec:
  selector:
    app: nginx
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
